362-[FIX]-vertical-align-form
- alignement des forms 'log-in' 'signup'
- footer toujours en bas de page seulement sur ces pages

--- a/main/local_modules/shared_web_theme/static/src/css/_super-backoffice.scss
+++ b/main/local_modules/shared_web_theme/static/src/css/_super-backoffice.scss
@@ -262,15 +262,29 @@
     color: $c-map;
   }
 }
-
+$header-height: 45px;
+$footer-height: 120px;
 .oe_single_form_container {
-  padding: 10px;
-  left: 50%;
-  top: 50%;
-  width: 400px;
-  margin-left: -200px;
+	padding: 10px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	width: 400px;
+	min-height: calc(100vh - #{$header-height + $footer-height});
+	margin-left: 0;
+	margin: 0 auto;
 }
 
+.modal-content {
+    position: relative;
+    background-color: transparent;
+    border: 0px solid #999;
+    border: 0px solid rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    -webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    outline: 0;
+}
 .navbar-static-top {
   background: none repeat scroll 0 0 #434a54;
 }
@@ -282,10 +296,6 @@
 footer {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
   padding: 10px;
-}
-
-.modal-content {
-  box-shadow: none;
 }
 
 a {
