--- a/main/local_modules/shared_web_theme/static/src/css/base.css
+++ b/main/local_modules/shared_web_theme/static/src/css/base.css
@@ -6149,10 +6149,23 @@ navbar-right #dLabel {
 
 .oe_single_form_container {
   padding: 10px;
-  left: 50%;
-  top: 50%;
+  padding-top: 100px;
+  padding-bottom: 100px;
   width: 400px;
-  margin-left: -200px; }
+  min-height: calc(100vh - 165px);
+  margin-left: 0;
+  margin: 0 auto; }
+
+.modal-content {
+  position: relative;
+  background-color: transparent;
+  border: 0px solid #999;
+  border: 0px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  -webkit-box-shadow: 0 0 0 transparent;
+  box-shadow: 0 0 0 transparent;
+  background-clip: padding-box;
+  outline: 0; }
 
 .navbar-static-top {
   background: none repeat scroll 0 0 #434a54; }
@@ -6164,9 +6177,6 @@ navbar-right #dLabel {
 footer {
   background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5);
   padding: 10px; }
-
-.modal-content {
-  box-shadow: none; }
 
 a {
   color: #b05ae2; }
